samples/_failures_safe/1761454399_e107db_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e5aefda3.c: In function ‘analyze_logs’:
./samples/SAFE/__tmp_e5aefda3.c:124:56: error: expected ‘)’ at end of input
  124 |         printf("Error rate: %.1f%%\n", error_percentage
      |               ~                                        ^
      |                                                        )
./samples/SAFE/__tmp_e5aefda3.c:124:9: error: expected declaration or statement at end of input
  124 |         printf("Error rate: %.1f%%\n", error_percentage
      |         ^~~~~~
./samples/SAFE/__tmp_e5aefda3.c:124:9: error: expected declaration or statement at end of input
